--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,7 +1,8 @@
 // Import all sass files here!
 
-@import 'utlities/base.scss';
-@import 'global/base.scss';
+@charset  'UTF-8';
+@import   'utilities/base';
+@import   'global/base';
 
 
 
