--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,9 +1,9 @@
 // Import all sass files here!
 
 @charset  'UTF-8';
-@import   '../../bower_components/normalize-scss/normalize.scss';               // Normalize
-@import   '../../bower_components/bourbon/app/assets/stylesheets/bourbon';      // Bourbon
-@import   '../../bower_components/neat/app/assets/stylesheets/neat';            // Bourbon Neat
+@import   '../../node_modules/sanitize.css/lib/sanitize.scss';                // Sanitize
+@import   '../../node_modules/bourbon/app/assets/stylesheets/bourbon.scss';   // Bourbon
+@import   '../../node_modules/bourbon-neat/app/assets/stylesheets/neat.scss'; // Neat
 @import   'utilities/base';                                                     // Vars, Mixins, Extends
 @import   'layout/base';                                                        // Site Styles
 
