--- a/assets/sass/partials/components/_buttons.scss
+++ b/assets/sass/partials/components/_buttons.scss
@@ -1,11 +1,7 @@
 // Button Styles
 // -------------
 
-.btn {
-  @include btn-reset();
-}
-
-#{$all-buttons},
-.btn-default {
-  @include btn-reset();
+button,
+a [type="button"] {
+  @include button-reset();
 }
