--- a/assets/sass/partials/utilities/variables/_var-fonts.scss
+++ b/assets/sass/partials/utilities/variables/_var-fonts.scss
@@ -1,26 +1,12 @@
 // Variables: Typography
 // ---------------------
 
-// Font-Face: http://bourbon.io/docs/#font-face
-// =============================================================================
-
-// @include font-face("source-sans-pro", "/app/themes/mission-control/dist/fonts/source-sans-pro-regular");
-
-// Fonts
-// =============================================================================
-
-$serif:							      $georgia;
-$sans-serif:						  $helvetica;
-$serif-alt:               $serif;
-$sans-serif-alt:          $sans-serif;
-$base-font-family:        $sans-serif;
+$base-font-family: $sans;
 
 // Font Sizes
 // =============================================================================
 
-$em-base: 22px !default;
 $base-font-size: 22px;
-$base-font-size-rem: rem(22);
 
 // Line Height
 // =============================================================================
